# Alfa-X-Ulsu-Hack

./: pyproject.toml
notebooks/: main.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
