[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
scikit-learn = "^1.5.0"
catboost = "^1.2.5"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
